Stärkere Generalisierung des Kontrakts ermöglicht, um ggf. das Backend einfach austauschen zu können.
